TEMP: Specify version 5.3.5 to use snapshot action

--- a/template/action.yml
+++ b/template/action.yml
@@ -70,7 +70,7 @@ runs:
       run: echo "COMMIT_UPDATED_LOCKFILE=${{ inputs.commit-lockfile }}" >> $GITHUB_ENV
       shell: bash
     - id: action
-      run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:${project.version}
+      run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:5.3.5
       shell: bash
       env:
         JSON_INPUTS: ${{ toJSON(inputs) }}
