--- a/template/action.yml
+++ b/template/action.yml
@@ -46,18 +46,18 @@ runs:
     - id: install-jbang
       run: curl -Ls https://sh.jbang.dev | bash -s - app setup
       shell: bash
-    - name: Get all changed pom.xml and workflow file(s)
+    - name: Get all changed pom.xml and workflow file(s) and set into POM_CHANGED env variable
       id: changed-files
-      uses: tj-actions/changed-files@9200e69727eb73eb060652b19946b8a2fdfb654b # v45
-      with:
-        files: |
-              **/pom.xml
-              **/${{ inputs.workflow-filename}}
-    - name: print all changed files
-      run: echo all changed files are ${{ steps.changed-files.outputs.all_changed_files }}
-      shell: bash
-    - name: Set POM_CHANGED environment variable
-      run: echo "POM_CHANGED=${{ steps.changed-files.outputs.any_changed}}" >> $GITHUB_ENV
+      run: |
+          # Get the list of files that were changed between the base branch and the current commit
+          CHANGED_FILES=$(git diff --name-only origin/$GITHUB_BASE_REF...HEAD)
+          
+          # Check if any files match the app/icons/** pattern
+          if echo "$CHANGED_FILES" | grep -Eq "^(pom.xml|${{ inputs.workflow-filename }})$"; then
+            echo "POM_CHANGED=true" >> $GITHUB_OUTPUT
+          else
+            echo "POM_CHANGED=false" >> $GITHUB_OUTPUT
+          fi
       shell: bash
     - name: print POM-CHANGED
       run: echo "pom changed ${{ env.POM_CHANGED }}"
