--- a/template/action.yml
+++ b/template/action.yml
@@ -46,18 +46,32 @@ runs:
     - id: install-jbang
       run: curl -Ls https://sh.jbang.dev | bash -s - app setup
       shell: bash
-    - name: Get all changed pom.xml and workflow file(s)
+    - name: Get all changed pom.xml and workflow file(s) and set into POM_CHANGED env variable
       id: changed-files
-      uses: tj-actions/changed-files@9200e69727eb73eb060652b19946b8a2fdfb654b # v45
-      with:
-        files: |
-              **/pom.xml
-              **/${{ inputs.workflow-filename}}
-    - name: print all changed files
-      run: echo all changed files are ${{ steps.changed-files.outputs.all_changed_files }}
-      shell: bash
-    - name: Set POM_CHANGED environment variable
-      run: echo "POM_CHANGED=${{ steps.changed-files.outputs.any_changed}}" >> $GITHUB_ENV
+      run: |
+          # Default to no change
+          echo "POM_CHANGED=false" >> $GITHUB_ENV
+
+          if [ -n "$GITHUB_BASE_REF" ]; then # Comparing against base branch (pull request)
+            BASE_REF="origin/$GITHUB_BASE_REF"
+          else # No base branch, comparing against previous commit
+            BASE_REF="HEAD^"
+          fi
+
+          # Safely attempt diff
+          if CHANGED_FILES=$(git diff --name-only "$BASE_REF"...HEAD 2>/dev/null); then
+            echo "Changed files: $CHANGED_FILES"
+
+            # Check if relevant files changed
+            if echo "$CHANGED_FILES" | grep -Eq "(pom.xml|${{ inputs.workflow-filename }})"; then
+              echo "Relevant files changed."
+              echo "POM_CHANGED=true" >> $GITHUB_ENV
+            else
+              echo "No relevant files changed."
+            fi
+          else
+            echo "Git diff failed, setting POM_CHANGED to false."
+          fi
       shell: bash
     - name: print POM-CHANGED
       run: echo "pom changed ${{ env.POM_CHANGED }}"
