:construction_worker: ci: use interim action

--- a/.github/workflows/LockfilePR.yml
+++ b/.github/workflows/LockfilePR.yml
@@ -25,14 +25,14 @@ jobs:
 
       - name: run maven-lockfile
         if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-        uses: chains-project/maven-lockfile@352fc01e7c64fdd4766d54931b14f03f958c62da # v5.4.1
+        uses: chains-project/maven-lockfile@c9d7656e5a161eddff354c8159a199ecd8133473 # v5.4.1+ (interim)
         with:
           github-token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
           include-maven-plugins: true
     
       - name: run maven-lockfile (fork/external)
         if: ${{ github.event.pull_request.head.repo.full_name != github.repository }}
-        uses: chains-project/maven-lockfile@352fc01e7c64fdd4766d54931b14f03f958c62da # v5.4.1
+        uses: chains-project/maven-lockfile@c9d7656e5a161eddff354c8159a199ecd8133473 # v5.4.1+ (interim)
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           include-maven-plugins: true
