--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,9 @@
     "41898282+github-actions[bot]@users.noreply.github.com",
     "github-actions[bot]@users.noreply.github.com"
   ],
+  "digest": {
+    "enabled": false
+  },
   "semanticCommitType": ":arrow_up:",
   "semanticCommits": true,
   "packageRules": [
@@ -42,7 +45,6 @@
     },
     {
       "updateTypes": [
-        "digest",
         "bump"
       ],
       "semanticCommitType": ":bookmark:",
