--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -114,9 +114,10 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Dirty Waters Analysis
-        uses: chains-project/dirty-waters-action@v1.11.24
+        uses: chains-project/dirty-waters-action@v1.11.31
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           package_manager: maven
+          ignore_cache: "true"
           gradual_report: false
 
