--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -18,6 +18,7 @@ jobs:
           allowed-endpoints: >
             github.com:443
             oss.sonatype.org:443
+            maven.artifacts.atlassian.com:443
             packages.atlassian.com:443
             repo.maven.apache.org:443
             repo.spring.io:443
@@ -52,6 +53,7 @@ jobs:
           allowed-endpoints: >
             github.com:443
             oss.sonatype.org:443
+            maven.artifacts.atlassian.com:443
             packages.atlassian.com:443
             repo.maven.apache.org:443
             repo.spring.io:443
