--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.3</version>
+        <configuration>
+            <rerunFailingTestsCount>3</rerunFailingTestsCount>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
