--- a/maven_plugin/pom.xml
+++ b/maven_plugin/pom.xml
@@ -232,6 +232,7 @@
               junit.jupiter.execution.parallel.config.strategy=fixed
               junit.jupiter.execution.parallel.config.fixed.parallelism=6</configurationParameters>
           </properties>
+          <rerunFailingTestsCount>3</rerunFailingTestsCount>
         </configuration>
         <executions>
           <execution>
