Add ignore config

--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -120,4 +120,5 @@ jobs:
           package_manager: maven
           gradual_report: false
           debug: true
+          config: dirty-waters.json
 
