--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -117,6 +117,7 @@ jobs:
         uses: chains-project/dirty-waters-action@v1.11.35
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          version_old: ${{ github.event.pull_request.base.sha }}
           package_manager: maven
           gradual_report: false
           debug: true
