--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -114,11 +114,11 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Dirty Waters Analysis
-        uses: chains-project/dirty-waters-action@v1.11.35
+        uses: chains-project/dirty-waters-action@v1.11.39
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           package_manager: maven
           gradual_report: false
           debug: true
-          config: chains-project/maven-lockfile/dirty-waters.json
+          config: dirty-waters.json
 
