--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -105,16 +105,16 @@ jobs:
     permissions:
       pull-requests: write # To comment on a Pull Request
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           submodules: true
       - name: Setup JDK17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@3a4f6e1af504cf6a31855fa899c6aa5355ba6c12 # v4.7.0
         with:
-          distribution: 'temurin'
           java-version: '17'
+          distribution: 'temurin'
       - name: Dirty Waters Analysis
-        uses: chains-project/dirty-waters-action@v1.11.42
+        uses: chains-project/dirty-waters-action@c66f3ec3a34924dcad7717e316223dd17cdf5a57 # v1.11.42
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           package_manager: maven
