--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -20,6 +20,7 @@ jobs:
             oss.sonatype.org:443
             repo.maven.apache.org:443
             repo.spring.io:443
+            tuf-repo-cdn.sigstore.dev:443
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up JDK 17
@@ -53,6 +54,8 @@ jobs:
             oss.sonatype.org:443
             repo.maven.apache.org:443
             repo.spring.io:443
+            tuf-repo-cdn.sigstore.dev:443
+
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up JDK 17
