--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -27,6 +27,7 @@ jobs:
             repo1.maven.org:443
             repository.sonatype.org:443
             sh.jbang.dev:443
+            tuf-repo-cdn.sigstore.dev:443
 
       - name: checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
