--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
 
 permissions:
+  id-token: write
   contents: read
 jobs:
   maven-quality:
@@ -55,7 +56,6 @@ jobs:
             repo.maven.apache.org:443
             repo.spring.io:443
             tuf-repo-cdn.sigstore.dev:443
-
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up JDK 17
