--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -22,6 +22,7 @@ jobs:
             repo.maven.apache.org:443
             repo.spring.io:443
             tuf-repo-cdn.sigstore.dev:443
+            fulcio.sigstore.dev:443
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up JDK 17
@@ -56,6 +57,7 @@ jobs:
             repo.maven.apache.org:443
             repo.spring.io:443
             tuf-repo-cdn.sigstore.dev:443
+            fulcio.sigstore.dev:443
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up JDK 17
