--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -23,6 +23,7 @@ jobs:
             repo.spring.io:443
             tuf-repo-cdn.sigstore.dev:443
             fulcio.sigstore.dev:443
+            rekor.sigstore.dev:443
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up JDK 17
@@ -58,6 +59,7 @@ jobs:
             repo.spring.io:443
             tuf-repo-cdn.sigstore.dev:443
             fulcio.sigstore.dev:443
+            rekor.sigstore.dev:443
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up JDK 17
