--- a/.github/workflows/publish-action-artifact.yml
+++ b/.github/workflows/publish-action-artifact.yml
@@ -27,6 +27,7 @@ jobs:
             repo.maven.apache.org:443
             tuf-repo-cdn.sigstore.dev:443
             fulcio.sigstore.dev:443
+            rekor.sigstore.dev:443
 
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
