--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -30,6 +30,7 @@ jobs:
             sh.jbang.dev:443
             tuf-repo-cdn.sigstore.dev:443
             fulcio.sigstore.dev:443
+            rekor.sigstore.dev:443
 
       - name: checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
