--- a/.github/workflows/publish-action-artifact.yml
+++ b/.github/workflows/publish-action-artifact.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - main
 permissions:
+  id-token: write
   contents: read
 jobs:
   build-and-push-action:
@@ -24,6 +25,9 @@ jobs:
             github.com:443
             maven.pkg.github.com:443
             repo.maven.apache.org:443
+            tuf-repo-cdn.sigstore.dev:443
+            fulcio.sigstore.dev:443
+            rekor.sigstore.dev:443
 
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
