--- a/github_action/pom.xml
+++ b/github_action/pom.xml
@@ -34,6 +34,12 @@
     <skipOriginalJarRename>true</skipOriginalJarRename>
     <quarkus.package.add-runner-suffix>false</quarkus.package.add-runner-suffix>
   </properties>
+  <scm>
+    <connection>scm:git:https://github.com/chains-project/maven-lockfile</connection>
+    <developerConnection>scm:git:https://github.com/chains-project/maven-lockfile.git</developerConnection>
+    <tag>v${project.version}</tag>
+    <url>https://github.com/chains-project/maven-lockfile/tree/${project.scm.tag}/github_action</url>
+  </scm>
   <dependencyManagement>
     <dependencies>
       <dependency>
