--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,8 @@
   <scm>
     <connection>scm:git:https://github.com/chains-project/maven-lockfile</connection>
     <developerConnection>scm:git:https://github.com/chains-project/maven-lockfile.git</developerConnection>
-    <url>https://github.com/chains-project/maven-lockfile.git</url>
+    <tag>v${project.version}</tag>
+    <url>https://github.com/chains-project/maven-lockfile/tree/${project.scm.tag}</url>
   </scm>
   <properties>
     <project.build.outputTimestamp>2025-04-23T17:09:30Z</project.build.outputTimestamp>
