--- a/maven_plugin/pom.xml
+++ b/maven_plugin/pom.xml
@@ -23,6 +23,12 @@
   <prerequisites>
     <maven>3.2.5</maven>
   </prerequisites>
+  <scm>
+    <connection>scm:git:https://github.com/chains-project/maven-lockfile</connection>
+    <developerConnection>scm:git:https://github.com/chains-project/maven-lockfile.git</developerConnection>
+    <tag>v${project.version}</tag>
+    <url>https://github.com/chains-project/maven-lockfile/tree/${project.scm.tag}/maven_plugin</url>
+  </scm>
   <properties>
     <mavenVersion>3.9.6</mavenVersion>
     <maven.compiler.target>11</maven.compiler.target>
