--- a/.github/workflows/ensure-notrunning-release.yml
+++ b/.github/workflows/ensure-notrunning-release.yml
@@ -10,9 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: check_release_running
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
+        with:
+          egress-policy: audit
+
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Check for running release action
         run: |
           CURRENTLY_RUNNING=$(gh run list -w jreleaser.yml --json status --jq '[.[] | select(.status == "queued" or .status == "in_progress" or .status == "requested" or .status == "waiting" or .status == "pending" or .status == "action_required")][0]')
           if [[ "$CURRENTLY_RUNNING" == *"status"* ]]; then
