--- a/.github/workflows/ensure-notrunning-release.yml
+++ b/.github/workflows/ensure-notrunning-release.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Check for running release action
         env:
-          GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           CURRENTLY_RUNNING=$(gh run list -w jreleaser.yml --json status --jq '[.[] | select(.status == "queued" or .status == "in_progress" or .status == "requested" or .status == "waiting" or .status == "pending" or .status == "action_required")][0]')
           if [[ "$CURRENTLY_RUNNING" == *"status"* ]]; then
