--- a/.github/workflows/ensure-notrunning-release.yml
+++ b/.github/workflows/ensure-notrunning-release.yml
@@ -12,7 +12,10 @@ jobs:
     steps:
       - uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
         with:
-          egress-policy: audit
+           egress-policy: block
+           allowed-endpoints: >
+             api.github.com:443
+             github.com:443
 
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -23,7 +26,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          CURRENTLY_RUNNING=$(gh run list -w jreleaser.yml --json status --jq '[.[] | select(.status == "queued" or .status == "in_progress" or .status == "requested" or .status == "waiting" or .status == "pending" or .status == "action_required")][0]')
+          CURRENTLY_RUNNING=$(gh run list -w code-quality.yml --json status --jq '[.[] | select(.status == "queued" or .status == "in_progress" or .status == "requested" or .status == "waiting" or .status == "pending" or .status == "action_required")][0]')
           if [[ "$CURRENTLY_RUNNING" == *"status"* ]]; then
             echo "❌ Release workflow is currently running. Please wait for it to finish then rerun this workflow to proceed."
             exit 1
