--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -49,10 +49,28 @@ jobs:
             tuf-repo-cdn.sigstore.dev:443
             www.bestpractices.dev:443
 
-      - name: "Checkout code"
+      - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           persist-credentials: false
+
+      - name: Verify action checksums
+        env:
+          VERSION: v0.5.1
+          CHECKSUM: 57270991fee8c7e0f00f5d27c36f514c1743621f11bd53685c3153477a4929de2851f2fb7d4a3f5b2a68c85203b35759d580a023544665b466a3298047034c64
+          GH_TOKEN: ${{ github.token }}
+          JOB: ${{ github.job }}
+          WORKFLOW: ${{ github.workflow_ref }}
+        run: |
+          # Download the ghasum CLI
+          ARTIFACT="ghasum_linux_amd64.tar.gz"
+          gh release download "${VERSION}" --repo chains-project/ghasum --pattern "${ARTIFACT}"
+          echo "${CHECKSUM}  ${ARTIFACT}" | shasum -a 512 -c -
+          tar -xf "${ARTIFACT}"
+
+          # Verify the action checksums
+          WORKFLOW=$(echo "${WORKFLOW}" | cut -d '@' -f 1 | cut -d '/' -f 3-5)
+          ./ghasum verify -cache /home/runner/work/_actions -no-evict -offline "${WORKFLOW}:${JOB}"
 
       - name: "Run analysis"
         uses: ossf/scorecard-action@f49aabe0b5af0936a0987cfb85d86b75731b0186 # v2.4.1
