--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -17,6 +17,7 @@ jobs:
           disable-sudo: true
           egress-policy: block
           allowed-endpoints: >
+            api.github.com:443
             github.com:443
             oss.sonatype.org:443
             maven.artifacts.atlassian.com:443
@@ -75,6 +76,7 @@ jobs:
           disable-sudo: true
           egress-policy: block
           allowed-endpoints: >
+            api.github.com:443
             github.com:443
             oss.sonatype.org:443
             maven.artifacts.atlassian.com:443
@@ -85,7 +87,8 @@ jobs:
             fulcio.sigstore.dev:443
             rekor.sigstore.dev:443
 
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Verify action checksums
         env:
