--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -25,7 +25,12 @@ jobs:
             api.securityscorecards.dev:443
             github.com:443
             objects.githubusercontent.com:443
+
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Verify action checksums
+        uses: ./.github/actions/ghasum
+
       - name: Dependency review
         uses: actions/dependency-review-action@da24556b548a50705dd671f47852072ea4c105d9 # v4.7.1
