--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -38,22 +38,7 @@ jobs:
           token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
 
       - name: Verify action checksums
-        env:
-          VERSION: v0.5.1
-          CHECKSUM: 57270991fee8c7e0f00f5d27c36f514c1743621f11bd53685c3153477a4929de2851f2fb7d4a3f5b2a68c85203b35759d580a023544665b466a3298047034c64
-          GH_TOKEN: ${{ github.token }}
-          JOB: ${{ github.job }}
-          WORKFLOW: ${{ github.workflow_ref }}
-        run: |
-          # Download the ghasum CLI
-          ARTIFACT="ghasum_linux_amd64.tar.gz"
-          gh release download "${VERSION}" --repo chains-project/ghasum --pattern "${ARTIFACT}"
-          echo "${CHECKSUM}  ${ARTIFACT}" | shasum -a 512 -c -
-          tar -xf "${ARTIFACT}"
-
-          # Verify the action checksums
-          WORKFLOW=$(echo "${WORKFLOW}" | cut -d '@' -f 1 | cut -d '/' -f 3-5)
-          ./ghasum verify -cache /home/runner/work/_actions -no-evict -offline "${WORKFLOW}:${JOB}"
+        uses: ./.github/actions/ghasum
 
       - name: Set up JDK 17
         uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
