--- a/.github/workflows/regenerate-lockfile.yml
+++ b/.github/workflows/regenerate-lockfile.yml
@@ -31,6 +31,6 @@ jobs:
         uses: ./.github/actions/ghasum
 
       - name: run maven-lockfile
-        uses: chains-project/maven-lockfile@v5.5.2
+        uses: .
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
