Use local action, regenerate gha.sum

--- a/.github/workflows/regenerate-lockfile.yml
+++ b/.github/workflows/regenerate-lockfile.yml
@@ -31,6 +31,6 @@ jobs:
         uses: ./.github/actions/ghasum
 
       - name: run maven-lockfile
-        uses: .
+        uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
