👷 ci: Add ghasum to github workflows (#1211)

--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -24,7 +24,13 @@ jobs:
             api.github.com:443
             api.securityscorecards.dev:443
             github.com:443
-      - name: 'Checkout Repository'
+            objects.githubusercontent.com:443
+
+      - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: 'Dependency Review'
-        uses: actions/dependency-review-action@da24556b548a50705dd671f47852072ea4c105d9 # v4.7.1
+
+      - name: Verify action checksums
+        uses: ./.github/actions/ghasum
+
+      - name: Dependency review
+        uses: actions/dependency-review-action@v4.7.1
