--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -17,7 +17,9 @@ jobs:
           disable-sudo: true
           egress-policy: block
           allowed-endpoints: >
+            api.github.com:443
             github.com:443
+            objects.githubusercontent.com:443
             oss.sonatype.org:443
             maven.artifacts.atlassian.com:443
             packages.atlassian.com:443
@@ -27,22 +29,33 @@ jobs:
             fulcio.sigstore.dev:443
             rekor.sigstore.dev:443
 
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Checkout repostiory
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Verify action checksums
+        uses: ./.github/actions/ghasum
+
       - name: Set up JDK 17
-        uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
+        uses: actions/setup-java@v4.7.1
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: mvn clean verify
         run: mvn clean verify
+
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots clean package
+
       - name: Run doc check
         run: mvn org.apache.maven.plugins:maven-javadoc-plugin:3.5.0:jar
+
       - name: Run spotless check
         run: mvn spotless:check
+
       - name: Check maven pom quality
         run: mvn org.kordamp.maven:pomchecker-maven-plugin:1.9.0:check-maven-central -D"checker.release=false"
+
   reproducilbilty:
     runs-on: ubuntu-latest
     defaults:
@@ -55,7 +68,9 @@ jobs:
           disable-sudo: true
           egress-policy: block
           allowed-endpoints: >
+            api.github.com:443
             github.com:443
+            objects.githubusercontent.com:443
             oss.sonatype.org:443
             maven.artifacts.atlassian.com:443
             packages.atlassian.com:443
@@ -65,13 +80,20 @@ jobs:
             fulcio.sigstore.dev:443
             rekor.sigstore.dev:443
 
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Verify action checksums
+        uses: ./.github/actions/ghasum
+
       - name: Set up JDK 17
-        uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
+        uses: actions/setup-java@v4.7.1
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots clean install
+
       - name: Run reproducibility check
         run: mvn clean install
