--- a/.github/workflows/ensure-release-notrunning.yml
+++ b/.github/workflows/ensure-release-notrunning.yml
@@ -10,17 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
+      - name: Harden Runner
+        uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
         with:
-           egress-policy: block
-           allowed-endpoints: >
-             api.github.com:443
-             github.com:443
+          egress-policy: block
+          allowed-endpoints: >
+            api.github.com:443
+            github.com:443
+            objects.githubusercontent.com:443
 
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Verify action checksums
+        uses: ./.github/actions/ghasum
 
       - name: Check for running release action
         env:
