--- a/.github/workflows/regenerate-lockfile.yml
+++ b/.github/workflows/regenerate-lockfile.yml
@@ -16,6 +16,7 @@ jobs:
           disable-sudo: true
           egress-policy: block
           allowed-endpoints: >
+            api.github.com:443
             github.com:443
             objects.githubusercontent.com:443
             raw.githubusercontent.com:443
@@ -23,7 +24,13 @@ jobs:
             repo1.maven.org:443
             sh.jbang.dev:443
 
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Verify action checksums
+        uses: ./.github/actions/ghasum
+
       - name: run maven-lockfile
-        uses: chains-project/maven-lockfile@dbd9538eaf1bc297225b74f5e891af7d2faf61a1 # v5.5.2
+        uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
