Test IT with ${} instead of @@

--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/freezeWithoutDepManagement/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/freezeWithoutDepManagement/pom.xml
@@ -55,7 +55,7 @@
                 <groupId>io.github.chains-project</groupId>
                 <artifactId>
                     maven-lockfile</artifactId>
-                <version>@project.version@</version>
+                <version>${project.version}</version>
                 <executions>
                     <execution>
                         <goals>
