--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -19,6 +19,7 @@ jobs:
             api.github.com:443
             github.com:443
             objects.githubusercontent.com:443
+            release-assets.githubusercontent.com:443
             repo.maven.apache.org:443
 
       - name: Checkout repository
