--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -21,17 +21,18 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             api.github.com:443
+            fulcio.sigstore.dev:443
             github.com:443
             objects.githubusercontent.com:443
             oss.sonatype.org:443
             raw.githubusercontent.com:443
+            rekor.sigstore.dev:443
+            release-assets.githubusercontent.com:443
             repo.maven.apache.org:443
             repo1.maven.org:443
             repository.sonatype.org:443
             sh.jbang.dev:443
             tuf-repo-cdn.sigstore.dev:443
-            fulcio.sigstore.dev:443
-            rekor.sigstore.dev:443
 
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
